--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,5 +39,5 @@ firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
+google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleServices" }
 
